2014-08-07  Andreas Arnez  <arnez@linux.vnet.ibm.com>

	* ia64-linux-tdep.c: Include "regset.h".
	(ia64_linux_gregmap, ia64_linux_fpregmap): New register maps.
	(IA64_LINUX_GREGS_SIZE, IA64_LINUX_FPREGS_SIZE): New macros.
	(ia64_linux_supply_fpregset): New function.
	(ia64_linux_gregset, ia64_linux_fpregset): New regsets.
	(ia64_linux_regset_from_core_section): New function.
	(ia64_linux_init_abi): Set regset_from_core_section gdbarch
	method.

2014-08-07  Andreas Arnez  <arnez@linux.vnet.ibm.com>

	* m68klinux-tdep.c: Include "regset.h".
	(m68k_linux_gregmap, m68k_linux_fpregmap): New register maps.
	(M68K_LINUX_GREGS_SIZE, M68K_LINUX_FPREGS_SIZE): New macros.
	(m68k_linux_gregset, m68k_linux_fpregset): New regsets.
	(m68k_linux_regset_from_core_section): New function.
	(m68k_linux_init_abi): Set regset_from_core_section gdbarch
	method.

2014-08-07  Andreas Arnez  <arnez@linux.vnet.ibm.com>

	* tilegx-linux-tdep.c (tilegx_linux_supply_regset): Delete
	function.  Move logic to...
	(tilegx_linux_regmap): ... this new register map.
	(tilegx_linux_regset): Refer to register map, replace supply
	method by regcache_supply_regset, and add collect method.
	* tilegx-tdep.h (enum tilegx_regnum): New enum value
	TILEGX_FIRST_EASY_REGNUM.

2014-08-07  Andreas Arnez  <arnez@linux.vnet.ibm.com>

	* score-tdep.c (score7_linux_supply_gregset): Reduce to small stub
	that calls regcache_supply_regset and handles the EPC register
	separately.  Move main logic to...
	(score7_linux_gregmap): ... this new register map.
	(SCORE7_LINUX_SIZEOF_GREGSET, SCORE7_LINUX_EPC_OFFSET): New macros.
	(score7_linux_gregset): Refer to register map.  Add collect method.
	(score7_linux_regset_from_core_section): Replace
	sizeof elf_gregset_t by SCORE7_LINUX_SIZEOF_GREGSET.
	* score-tdep.h (enum gdb_regnum): New enum value SCORE_EPC_REGNUM.
	(struct regset): Delete unused forward declaraction.
	(struct pt_regs): Delete structure definition.
	(elf_gregset_t): Delete typedef.
